deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kite
  name: kite
  namespace: kite-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kite
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kite
    spec:
      containers:
      - env:
        - name: PORT
          value: "8080"
        - name: KITE_BASE_URL
          value: http://10.62.21.60:30089
        - name: HOST
          value: http://10.62.21.60:30089
        - name: DB_TYPE
          value: sqlite
        - name: DB_DSN
          value: /app/data/kite.db?_journal_mode=DELETE&_busy_timeout=5000
        - name: HTTP_PROXY
          value: http://192.168.100.100:3128
        - name: HTTPS_PROXY
          value: http://192.168.100.100:3128
        - name: NO_PROXY
          value: localhost,127.0.0.1,kubernetes.default.svc,10.62.21.60,172.20.78.166,localzoho.com,localzoho.in,172.20.97.144
        - name: KITE_SECURE_COOKIE
          value: "false"
        - name: KITE_PING_INTERVAL
          value: 15s
        - name: KITE_OAUTH_BOOTSTRAP_NAME
          value: zoho
        - name: KITE_OAUTH_BOOTSTRAP_CLIENT_ID
          value: 1000.4N2G3SIGQBMKW7FMIYPHEAXCXBM3AD
        - name: KITE_OAUTH_BOOTSTRAP_CLIENT_SECRET_ENCRYPTED
          value: 3oY7JYCHmV/JiOQEQ8bhs07hTDa+cdo/JuPwskeFloDguNAhvYK1NLgC76fLAJfuV4nFsI7IYD9lejgdVoIWemNCReqsfg==
        - name: KITE_OAUTH_BOOTSTRAP_AUTH_URL
          value: https://accounts.zoho.in/oauth/v2/auth
        - name: KITE_OAUTH_BOOTSTRAP_TOKEN_URL
          value: https://accounts.zoho.in/oauth/v2/token
        - name: KITE_OAUTH_BOOTSTRAP_USERINFO_URL
          value: https://accounts.zoho.in/oauth/user/info
        - name: KITE_OAUTH_BOOTSTRAP_SCOPES
          value: AaaServer.profile.READ
        - name: KITE_SUPERADMIN_EMAILS
          value: prabhusarathy.g@zohocorp.com,akash.varen@zohocorp.com,sivasailesh.vb@zohocorp.com,vidhyadharan.ss@zohocorp.com
        - name: KITE_ENCRYPT_KEY
          value: CkenL+ZCSkszpOraAYGrJkKAKdk7EB8T5hVGC9EOYks=
        - name: JWT_SECRET
          value: Hvdrksp2003
        image: crmdi-test6.csez.zohocorpin.com/dev/kite:v3.11
        imagePullPolicy: Always
        name: kite
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /app/data
          name: kite-data
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      nodeSelector:
        kubernetes.io/hostname: 10.134.47.20
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: kite
      serviceAccountName: kite
      terminationGracePeriodSeconds: 30
      volumes:
      - name: kite-data
        persistentVolumeClaim:
          claimName: kite-pvc
